[package]
name = "dv4lua"
version = "0.1.0"
edition = "2024"

description = "a lua-based command line tool that provides abstract user (device) interoperability"
authors = ["km0e <kmdr.error@gmail.com>"]
repository = "https://github.com/km0e/dv4lua.git"


[package.metadata.wix]
upgrade-guid = "EE2C9595-12ED-48A2-BC03-E920E3E35D71"
path-guid = "68B3DC1D-4B94-4B23-BCED-67CB53CA28D0"
license = false
eula = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
home = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }

# dv-wrap = { git = "https://github.com/km0e/dv-api", features = ["full"] }
# dv-api = { git = "https://github.com/km0e/dv-api", features = ["full"] }
# os2 = { git = "https://github.com/km0e/dv-api", features = ["serde"] }

dv-wrap = { path = "../dv-api/dv-wrap", features = ["full"] }
dv-api = { path = "../dv-api/dv-api/", features = ["full"] }
os2 = { path = "../dv-api/os2/", features = ["serde"] }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1.46", features = [
  "fs",
  "io-std",
  "rt-multi-thread",
  "macros",
] }

mlua = { version = "0.11", features = ["async", "lua54", "vendored"] }
thiserror = "2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
