[package]
name = "dv4lua"
version = "0.1.8"
edition = "2024"
description = "a lua-based command line tool that provides abstract user (device) interoperability"
authors = ["km0e <kmdr.error@gmail.com>"]
repository = "https://github.com/km0e/dv4lua.git"
homepage = "https://blog.101248.xyz/dv4lua/"

[package.metadata.wix]
upgrade-guid = "EE2C9595-12ED-48A2-BC03-E920E3E35D71"
path-guid = "68B3DC1D-4B94-4B23-BCED-67CB53CA28D0"
license = false
eula = false

[dependencies]
clap = { version = "4.5", features = [] }
directories = { version = "6.0.0" }
dv-wrap = { git = "https://github.com/km0e/dv-api", features = ["full"] }
dv-api = { git = "https://github.com/km0e/dv-api", features = ["full"] }
futures = "0.3"
humantime-serde = { version = "1.1" }
mlua = { version = "0.11", features = ["async", "serde", "lua54", "vendored"] }
os2 = { version = "0.1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
